--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="map" style="height: 100vh"></div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNTF8mgN0d46Y28hw72ACQokoG7clZUjA"></script>
   <script src="./src/index.ts"></script>
 </body>
 </html>
